@@ -9,11 +9,9 @@ import org.springframework.stereotype.Repository;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
-import java.util.Arrays;
 
 interface SpringDataTaskRepository extends JpaRepository<TaskEntity, UUID> {
-    List<TaskEntity> findByColumnId(UUID columnId);
+    List<TaskEntity> findByColumnIdOrderByPosition(UUID columnId);
 }
 
 @Repository
@@ -22,34 +20,45 @@ public class JpaTaskRepositoryImpl implements TaskRepository {
     private final SpringDataTaskRepository repository;
 
     @Override
-    public List<Task> findByColumnId(UUID columnId) {
-        return repository.findByColumnId(columnId).stream()
+    public List<Task> findByColumnId(String columnId) {
+        return repository.findByColumnIdOrderByPosition(UUID.fromString(columnId)).stream()
                 .map(this::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    public Optional<Task> findById(UUID id) {
-        return repository.findById(id).map(this::toDomain);
+    public Optional<Task> findById(String id) {
+        return repository.findById(UUID.fromString(id)).map(this::toDomain);
     }
 
     @Override
     public Task save(Task task) {
-        TaskEntity entity = new TaskEntity(task.id(), task.name(), task.position(), 
-                                           task.createdAt(), task.dueDate(), task.completed(), 
-                                           String.join(",", task.tags()), task.columnId());
-        repository.save(entity);
+        repository.save(new TaskEntity(
+                UUID.fromString(task.id()),
+                task.name(),
+                task.position(),
+                task.createdAt(),
+                task.dueDate(),
+                task.completed(),
+                task.tags(),
+                UUID.fromString(task.columnId())));
         return task;
     }
 
     @Override
-    public void deleteById(UUID id) {
-        repository.deleteById(id);
+    public void deleteById(String id) {
+        repository.deleteById(UUID.fromString(id));
     }
 
     private Task toDomain(TaskEntity e) {
-        return new Task(e.getId(), e.getName(), e.getPosition(), e.getCreatedAt(), 
-                        e.getDueDate(), e.isCompleted(), 
-                        e.getTags() != null && !e.getTags().isEmpty() ? Arrays.asList(e.getTags().split(",")) : List.of(), e.getColumnId());
+        return new Task(
+                e.getId().toString(),
+                e.getName(),
+                e.getPosition(),
+                e.getCreatedAt(),
+                e.getDueDate(),
+                e.isCompleted(),
+                e.getTags() != null ? e.getTags() : List.of(),
+                e.getColumnId().toString());
     }
 }
